fix error that caused the nav bar to position behind of funding round section

--- a/css/style.css
+++ b/css/style.css
@@ -54,6 +54,7 @@ a {
 nav {
   width: 100%;
   height: 48px;
+  z-index: 100;
 }
 
 .bottom-nav {
@@ -235,6 +236,7 @@ header {
   position: relative;
   background-color: #fffaf8;
   margin-top: 20px;
+  z-index: -100;
 }
 
 .main-info {
